--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,3 +1,3 @@
 [deps]
-CommandComposer = "b5b47461-4a42-4db3-bdf2-684fadd57bc3"
+ComposableCommands = "b5b47461-4a42-4db3-bdf2-684fadd57bc3"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
