Rename in Project.toml

--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "CommandComposer"
+name = "ComposableCommands"
 uuid = "b5b47461-4a42-4db3-bdf2-684fadd57bc3"
 authors = ["singularitti <singularitti@outlook.com> and contributors"]
 version = "0.1.0"
